[rukmal] finished lit review

--- a/references.bib
+++ b/references.bib
@@ -26,6 +26,42 @@
     issn = {00010782}
 }
 
+@techreport{EconomicClassificationPolicyCommitteeECPC20072017Manual,
+    title = {{2017 North American Industry Classification System (NAICS) Manual}},
+    year = {2007},
+    author = {{Economic Classification Policy Committee (ECPC)}},
+    pages = {963},
+    url = {https://www.census.gov/library/publications/2017/econ/2017-naics-manual.html},
+    institution = {United States Office of Management and Budget},
+    address = {Washington, D.C.}
+}
+
+@article{Hrazdil2013AStudy,
+    title = {{A comparison of industry classification schemes: A large sample study}},
+    year = {2013},
+    journal = {Economics Letters},
+    author = {Hrazdil, Karel and Trottier, Kim and Zhang, Ray},
+    pages = {77--80},
+    volume = {118},
+    url = {www.elsevier.com/locate/ecolet},
+    doi = {10.1016/j.econlet.2012.09.022}
+}
+
+@article{Tsai2004AMethodology,
+    title = {{A purchase-based market segmentation methodology}},
+    year = {2004},
+    journal = {Expert Systems with Applications},
+    author = {Tsai, C.-Y. and Chiu, C.-C.},
+    number = {2},
+    month = {8},
+    pages = {265--276},
+    volume = {27},
+    publisher = {Pergamon},
+    url = {https://www.sciencedirect.com/science/article/pii/S0957417404000132},
+    doi = {10.1016/J.ESWA.2004.02.005},
+    issn = {0957-4174}
+}
+
 @article{Heer2010AZoo,
     title = {{A tour through the visualization zoo}},
     year = {2010},
@@ -69,6 +105,17 @@
     address = {New York}
 }
 
+@book{Vernimmen2005CorporatePractice,
+    title = {{Corporate Finance - Theory and Practice}},
+    year = {2005},
+    author = {Vernimmen, Pierre and Quiry, Pascal and Dallocchio, Maurizio and Le Fur, Yann and Salvi, Antonio},
+    edition = {1},
+    pages = {1059},
+    publisher = {John Wiley {\&} Sons, Ltd},
+    address = {Chichester},
+    isbn = {0-470-09225-4}
+}
+
 @techreport{StandardPoorsRatingServices2014CorporateMethodology,
     title = {{Corporate Ratings Methodology}},
     year = {2014},
@@ -76,6 +123,33 @@
     pages = {3},
     url = {https://www.spratings.com/documents/20184/774196/Corporate+Ratings+Methodology.pdf},
     address = {Sydney}
+}
+
+@article{Wang2018CorrelationNetworks,
+    title = {{Correlation structure and evolution of world stock markets: Evidence from Pearson and partial correlation-based networks}},
+    year = {2018},
+    journal = {Computational Economics},
+    author = {Wang, Gang-Jin and Xie, Chi and Stanley, H Eugene},
+    number = {3},
+    pages = {607--635},
+    volume = {51},
+    publisher = {Springer},
+    issn = {0927-7099}
+}
+
+@article{Chen2004DeterminantsCompanies,
+    title = {{Determinants of capital structure of Chinese-listed companies}},
+    year = {2004},
+    journal = {Journal of Business Research},
+    author = {Chen, Jean J.},
+    number = {12},
+    month = {12},
+    pages = {1341--1351},
+    volume = {57},
+    publisher = {Elsevier},
+    url = {https://www.sciencedirect.com/science/article/abs/pii/S0148296303000705},
+    doi = {10.1016/S0148-2963(03)00070-5},
+    issn = {0148-2963}
 }
 
 @misc{U.S.SecuritiesandExchangeCommission2019DivisionList,
@@ -141,6 +215,16 @@
     address = {Mountain View}
 }
 
+@techreport{OfficeofStatisticalStandards-BureauoftheBudget1957HistoryClassification,
+    title = {{History of the Standard Industrial Classification}},
+    year = {1957},
+    author = {{Office of Statistical Standards - Bureau of the Budget}},
+    pages = {3},
+    url = {http://www.census.gov/epcd/www/sichist.htm[4/5/20118:17:06AM]},
+    institution = {Executive Office of the President of the United States},
+    address = {Washington, D.C.}
+}
+
 @misc{FTSEInternationalLimited2019IndustryRussell,
     title = {{Industry Classification Benchmark (ICB) | FTSE Russell}},
     year = {2019},
@@ -176,6 +260,20 @@
     address = {New York}
 }
 
+@article{Huang2007MarketingClustering,
+    title = {{Marketing segmentation using support vector clustering}},
+    year = {2007},
+    journal = {Expert Systems with Applications},
+    author = {Huang, Jih-Jeng and Tzeng, Gwo-Hshiung and Ong, Chorng-Shyong},
+    number = {2},
+    month = {2},
+    pages = {313--317},
+    volume = {32},
+    publisher = {Pergamon},
+    url = {https://www.sciencedirect.com/science/article/pii/S0957417405003404},
+    doi = {10.1016/J.ESWA.2005.11.028}
+}
+
 @techreport{2018NASDAQ-100METHODOLOGY,
     title = {{NASDAQ-100 INDEX METHODOLOGY}},
     year = {2018},
@@ -190,6 +288,16 @@
     publisher = {Harvard Business School Press},
     url = {https://www.amazon.com/New-Improved-Story-Marketing-America/dp/0875846726},
     isbn = {9780875846729}
+}
+
+@techreport{UnitedStatesOfficeofManagementandBudget1997NorthNotice,
+    title = {{North American Industry Classification System - 1987 Standard Industrial Classification Replacement Notice}},
+    year = {1997},
+    author = {{United States Office of Management and Budget}},
+    pages = {51},
+    url = {https://www.census.gov/eos/www/naics/federal_register_notices/notices/fr09ap97.pdf},
+    institution = {Executive Office of the President of the United States},
+    address = {Washington, D.C.}
 }
 
 @article{Markowitz1952PortfolioSelection,
@@ -250,6 +358,57 @@
     author = {{Sifma}},
     pages = {25},
     url = {https://www.sifma.org/insights}
+}
+
+@article{Hicks2011StructuralClassification,
+    title = {{Structural change and industrial classification}},
+    year = {2011},
+    journal = {Structural Change and Economic Dynamics},
+    author = {Hicks, Diana},
+    number = {2},
+    pages = {93--105},
+    volume = {22},
+    url = {https://www.sciencedirect.com/science/article/abs/pii/S0954349X11000208},
+    doi = {10.1016/j.strueco.2011.03.001}
+}
+
+@article{Modigliani1958TheInvestment,
+    title = {{The Cost of Capital, Corporation Finance and the Theory of Investment}},
+    year = {1958},
+    journal = {The American Economic Review},
+    author = {Modigliani, Franco and Miller, Merton H.},
+    number = {3},
+    pages = {261--297},
+    volume = {48},
+    publisher = {American Economic Association},
+    url = {https://www.jstor.org/stable/1809766},
+    doi = {10.2307/1809766}
+}
+
+@article{Delcoure2007TheEconomies,
+    title = {{The determinants of capital structure in transitional economies}},
+    year = {2007},
+    journal = {International Review of Economics {\&} Finance},
+    author = {Delcoure, Natalya},
+    number = {3},
+    month = {1},
+    pages = {400--415},
+    volume = {16},
+    publisher = {JAI},
+    url = {https://www.sciencedirect.com/science/article/pii/S1059056006000086},
+    doi = {10.1016/J.IREF.2005.03.005},
+    issn = {1059-0560}
+}
+
+@article{Weiner2005TheResearch,
+    title = {{The Impact of Industry Classification Schemes on Financial Research}},
+    year = {2005},
+    journal = {SSRN Electronic Journal},
+    author = {Weiner, Christian},
+    url = {http://sfb649.wiwi.hu-berlin.de},
+    doi = {10.2139/ssrn.871173},
+    issn = {1556-5068},
+    keywords = {industry classification}
 }
 
 @article{Lafontaine2007VerticalJSTOR,
