--- a/resources/glossary.tex
+++ b/resources/glossary.tex
@@ -54,3 +54,21 @@
     name=HCA,
     description={Hierarchical clustering algorithm/analysis}
 }
+
+\newglossaryentry{SIC}
+{
+    name=SIC,
+    description={Standard Industrial Classification}
+}
+
+\newglossaryentry{NAICS}
+{
+    name=NAICS,
+    description={North American Industry Classification System}
+}
+
+\newglossaryentry{GICS}
+{
+    name=GICS,
+    description={Global Industry Classification System; informs the S\&P 500 Sector Classifications}
+}
