--- a/sections/02_research_goals.tex
+++ b/sections/02_research_goals.tex
@@ -24,7 +24,7 @@ The thesis statement above encapsulates - at a very high level - the key issues 
 
 To combat the primary issue of the previously discussed classification heuristics (their lack of objectivity, particularly for newly classified companies), we decided to restrict our input data to the classification algorithm to comprise only fundamentals data. That is, data solely from financial reports and accounting statements. We believe that this restriction sufficiently limits the scope of our investigation, while also providing us with a quantifiable objective measure of a candidate corproation's capital structure, which - we believe - will reflect its underlying economic function.
 
-Given the constraint on our input data, with the end goal of increasing objectivity, and reducing subjective involvement in the classification of the corporations, we also postulate that we will use data driven algorithms to derive potential classifications. That is, we plan to use entirely Unsupervised Learning methods, which do not require the definition of a \textit{cost function}. This lack of a cost function - in addition to reducing complexity of the project - also removes another aspect of potential bias in the classification of the companies.
+Given the constraint on our input data - motivated by end goal of increasing objectivity and reducing subjective involvement in the classification of the corporations - we also postulate that we will use data driven algorithms to derive potential classifications. That is, we plan to use entirely Unsupervised Learning methods, which do not require the definition of a \textit{cost function}. This lack of a cost function - in addition to reducing complexity of the project - also removes another aspect of potential bias in the classification of the companies.
 
 However, a shortcoming of this approach is that we will have a clustering algorithm parameterized by some set of arbitrary parameters, which will map a set of potential corporations to a set of potential market sectors. In keeping with the spirit of objectivity, we cannot arbitrarily assign values to the parameters, and thus must derive a method for \textit{ranking} our potential sector universes. Note that this ranking cannot be on an objective scale, but rather would be a relative ranking comparing each candidate universe to its peers, thus maintaining objectivity of the ranking.
 
