--- a/sections/03_literature_review.tex
+++ b/sections/03_literature_review.tex
@@ -3,7 +3,56 @@
 \begin{document}
     
 \chapter{Literature Review}
-    
-This is the literature review section, with a sample footnote citation (citations should always be made like this).\footnote{\cite{UniversityofPennsylvania-WRDSWhartonResearchDataServices2019CompustatIQ}}
+
+Having identified concrete research goals designed to fully explore the scope our thesis statement, we explored existing research in the field of market segmentation.
+
+Due to their many applications and widespread use across the world, the problem of market sectorization has been approached through myriad lenses. For example, some authors have focused on sub-dividing an already established (i.e. dogmatic) sectors, while others have focused on the specific learning algorithms that may be successfully applied to the task of hierarchical decomposition of a set of related entites.
+
+To best navigate the large corpus of research that is relevant to our research goals, we divide the presentation of our literature review into three sections:
+
+\begin{itemize}
+    \item \textbf{Existing Heuristic Evaluation}: Evaluating the existing dominant sectorization heuristics.
+    \item \textbf{Alternative Approaches to Market Sectorization}: Exploration of unorthodox approaches to market sectorization.
+    \item \textbf{Relationship between Economic Sectors and Fundamentals Data}: Analysis of the relationship between company fundamentals data and their business function.
+\end{itemize}
+
+
+\section{Existing Heuristic Evaluation} \label{literature_review:existing_heuristic_evaluation}
+
+Originally established in the United States in 1937, the SIC\citeFormat{\cite{OfficeofStatisticalStandards-BureauoftheBudget1957HistoryClassification}} is a system for classifying industries with a four-digit code. Due to its abundant use in industry, the SIC Classification system has been widely used as an instrument in published Finance and Accounting Research. In 1997, the North American Industry Classification System\citeFormat{\cite{UnitedStatesOfficeofManagementandBudget1997NorthNotice}} (hereafter \textit{NAICS}) was been adopted as an alternative to the SIC by various Government agencies, and is often cited interchangably with the SIC in certain research. The key difference between the two heuristics is that NAICS is production-oriented, whereas the SIC is market-oriented.\citeFormat{\cite{EconomicClassificationPolicyCommitteeECPC20072017Manual}}
+
+In \textit{The Impact of Industry Classifcation Schemes on Financial Research},\citeFormat{\cite{Weiner2005TheResearch}} the author evaluates the usage of existing classification heuristics in Finance and Accounting Research published in major research journals. The author finds that approximately 30\% of all research published in the top 3 Finance, and top 2 Accounting journals utlize industry classification systems. Given this relatively abundant usage, it is extremely concerning that the underlying heuristic itself is not entirely objective or quantitatively derived, as discussed in Section~\ref{introduction:key_limitations}.
+
+They are mainly used for sample restriction (34\%), comparable company selection (31\%), and detection of industry effects (12\%). Under the reasonable assumption that Finance and Accounting Research is utilized when publishers create or update classification heuristics, this behavior of widespread use in existing work may be indicative of a feedback pattern, where existing structural dogmas of prior classification heuristics are implicitly reimposed on new systems. Additionally, the author also discovers that approximately 45\% of all corporations change their industry over time based on the SIC Classification, and 20\% based on the GICS\citeFormat{\cite{MSCI-MorganStanleyCapitalInternational2019GICSMSCI}} industry classifications. This result highlights the lack of temporal stability prevalent in popular classification heuristics.
+
+Despite this apparent lack of temporal stability of assignment, in her paper \textit{Structural change and industrial classification},\citeFormat{\cite{Hicks2011StructuralClassification}} the author evaluates the impact of the slow rate of change of existing heuristics with respect to the addition and deletion of new and emergent industry groups to sector classification taxonomies. The author recognizes the fact that existing heuristics provide an incaculable resource to researchers. Due to this, she also infers that the co-dependence of researchers and classification publication agencies have led to existing classification schemes becoming de-facto descriptors of economic industries, as opposed to the other way around. The author then performs an emperical analysis of the classification of highly innovative firms providing products and services in gaming devices, packaging, filtration, photonics, imaging, biomedical research, and fabless semiconductor design. Through her analysis, she finds significant vertical disintegration in existing classification heuristics.
+
+The performance of NAICS and the GICS S\&P 500 Classification heuristics are evaluated from a quantitative perspective in \textit{A comparison of industry classification schemes: A large sample study}.\citeFormat{\cite{Hrazdil2013AStudy}} The authors perform individual linear regressions of a selection of fundamentals and earnings data of companies in the S\&P Composite 1500 index against the sector assignments implied by the NAICS and GICS heuristics (among others). The various linear regressions are compared through the lens of an adjusted $R^2$-derived metric. The results indicate that the GICS heuristic performed best, but the maximum adjusted $R^2$-derived metric (realized on the monthly returns vs. GICS sector linear regression) was only 13.59\%. Clearly, this is an extremely sub-optimal result.
+
+
+\section{Alternative Approaches to Market Sectorization}
+
+While not directly applied to the specific research problem of Market Sectorization, \textit{Correlation Structure and Evolution of World Stock Markets: Evidence from Pearson and Partial Correlation-Based Networks}\citeFormat{\cite{Wang2018CorrelationNetworks}} provides excellent insight into the correlation structure of returns in the more generalized global economic environment. The authors analyzed daily price indices of 57 stock markets from 2005 to 2014, and inspected the distributions of the Pearson and Partial correlations between pairs of stock markets. In addition to affirming Economic theory through the confirmation that correlations between markets increase substantially during crisis, they also found that large groups of correlated markets exist based on their geographic location.
+
+The authors' results confirm that the existence of pre-determined groupings of assets significantly affects the correlation distribution of those assets over time. Treating the geographic location of markets as a proxy for a generalized pre-existing group, we can extrapolate these effects to the more localized United States market. This generalization suggests that the existing sector groups would have a significant effect on the historical returns of companies in a given sector. This in turn implies that the usage of historical asset returns would introduce bias from existing sector groups to a new heuristic.
+
+\textit{Marketing segmentation using support vector clustering}\citeFormat{\cite{Huang2007MarketingClustering}} explores the application of a support vector clustering (a permutation of the support vector machine) to a relatively low-dimensional marketing dataset to derive clusters. The support vector clustering method is parametrized with a cluster count, and a random initialization of cluster centroids. Additionally, support vector clustering does not guarantee cluster assignment for all data points, and outliers remain unclassified. This approach is then compared to a $k$-means clustering and self-organizing feature map (SOFM) method, and is found to perform better based on a mean and standard error index evaluation. Despite appearing to be a promising approach in the authors' sample case study, the support vector clustering algorithm's cluster count parameterization, and its treatment of outliers do not make it suitable for the problem of market sectorization.
+
+The authors of \textit{A purchase-based market segmentation methodology}\citeFormat{\cite{Tsai2004AMethodology}} apply a genetic algorithm to cluter transactional purchase data from a set of customers, with the end goal of training an RFM (Recency, Frequency, Monetary Value) model. The genetic algorithm, along with a cost function to assess the fidelity of fit, is used to segment customers into unique clusters based on their purchasing data. The iterative and stochastic behavior of the genetic algorithm ensures that the resulting cluster assignments are extremely stable, while also being nonvariant with respect to centroid initialization. However, as with the previously discussed support vector clustering method, this approach is hindered by the required prior specification of a cluster count, as well as not being hierarchical in nature.
+
+\pagebreak
+
+\section{Relationship between Economic Sectors and Fundamentals Data}
+
+\textit{The determinants of capital structure in transitional economies}\citeFormat{\cite{Delcoure2007TheEconomies}} provides an in-depth quantitative analysis of the alignment of traditional optimal capital-structure dogma against the real-world behavior of companies in transitional economies. The results suggest that while some traditional capital structure theories are indeed applicable to transitional economies, a large portion of capital structures are not well described by these traditional theories. Rather, the author finds that disparities in legal systems, shareholder power and demographics, and corporate governance provide a significantly better frame of explanation for the variance observed in capital structure.
+
+\textit{Determinants of capital structure of Chinese-listed companies}\citeFormat{\cite{Chen2004DeterminantsCompanies}} analyzes the capital structures of corporations in China, providing a much better proxy for the large developed United States economy. The results presented by the authors echo that of \citeauthor{Delcoure2007TheEconomies}, asserting that traditional theory does not fully describe the distribution of capital structures in China. Furthermore, the authors also allude to myriad other factors affecting capital structure, similar to \citeauthor{Delcoure2007TheEconomies}. This work confirms that the dynamics of the determinants of capital structures observed in transitional economies are portable to larger, more established economies.
+
+As highlighted above in Section~\ref{literature_review:existing_heuristic_evaluation}, existing sectorization heuristics do not exhibit strong temporal stability. Thus, to avoid overfitting against the changing dynamics of a market when designing our new sectorization heuristic, we postulate that it would be beneficial to treat the market as constantly transitional. Under this assumption, the findings of \citeauthor{Delcoure2007TheEconomies} can be applied to our prospective heuristic to great effect. The author's findings would suggest that we focus on determinants of the factors listed above to best capture the idiosyncratic dynamics of a given company, as opposed to focusing on traditional metrics of performace, such as asset returns.
+
+Under the assumptions of the Modigliani-Miller theoretic universe, the capital structure irrelevance principle\citeFormat{\cite{Modigliani1958TheInvestment}} postulates that - in an efficient market - the value of a firm is unaffected by how that firm is financed. However, given that all of the conditions of the theoretic universe are violated in the real world, this leads to the profound realization that capital structure is the single most important determintant of firm value.\citeFormat{\cite{Vernimmen2005CorporatePractice}} Based on the observation that firm value is derived from a company's intrinsic economic domain of operation, the capital structure irrelevance principle - in conjunction with the violation of Modigliani-Miller unvierse assumptions - implies that capital structure is governed by the idiosyncracies of the true economic domain of a company.
+
+Given that the exact quantified magnitude of violation of each of the Modigliani-Miller theoretic universe conditions are inherently specific to a given economic segment, we postulate that corporation fundamentals reflective of capital structure - particularly those specific to the Modigliani-Miller universe conditions - would be the optimal determinants of truly objective sectors reflective of the underlying economy.
+
 
 \end{document}
