--- a/sections/04_feature_selection.tex
+++ b/sections/04_feature_selection.tex
@@ -3,6 +3,10 @@
 \begin{document}
 
 \chapter{Feature Selection} \label{feature_selection}
+
+In this section, we identify the data used in our classification heuristic, and describe our benchmark universe.
+
+The implications of the capital structure irrelevance principle, in conjunction with the observations of the dynamics of capital structure in transitional and established economies alike provide a strong basis for the selection of our features.
   
 \begin{itemize}
     \item Where do we get our data?
