--- a/sections/10_conclusion.tex
+++ b/sections/10_conclusion.tex
@@ -83,7 +83,7 @@ In this section, we will reiterate our main findings, and relate them back to ou
 \vspace*{\fill}
 
 \begin{center}
-    \bfseries Having addressed our specific research goals, RG-1, RG-2, and RG-3, we assert and affirm that we fully explored the scope of the thesis statement of our FE 800 Project in Spring Semester, 2019.
+    \bfseries Having addressed our specific research goals, RG-1, RG-2, and RG-3, we assert and affirm that we fully explored the scope of the thesis statement of our FE 800 Project in Spring Semester 2019.
 \end{center}
 
 \vspace*{\fill}
