--- a/sections/01_introduction.tex
+++ b/sections/01_introduction.tex
@@ -12,15 +12,13 @@ The evolution of Market Segments and Market Sectors have historically been extre
 
 \section{Applications of Market Sectors}
 
-In addition to being a useful theoretical guideline for the stage of growth of an economy, market sectors and segments also serve extremely valuable functional roles in the modern economy.
-
-The Securities and Exchange Commission (SEC) of the United States classifies every company into a sepecific sector, as a part of its regulatory perogative.\citeFormat{\cite{U.S.SecuritiesandExchangeCommission2019DivisionList}} This is a key prerequisite to effective monitoring and governance. The sheer scope of the modern economy guarantees the necessity of such classificaitons; the current scope of the economy spans - indisputably - all facets of Human culture. This gargantuan scope demands specialization, which - in turn - demands organization; motivating the need for market sectors.
+The United States Government began classifying companies into segments and sub-groups with the introduction of the Standard Industrial Classification (hereafter \textit{SIC}) system in 1937.\citeFormat{\cite{OfficeofStatisticalStandards-BureauoftheBudget1957HistoryClassification}} As evidenced by history, the effective classification of companies is a key prerequisite to scalable monitoring and governance. The sheer scope of the modern economy guarantees the necessity of such classificaitons; the current scope of the economy spans - indisputably - all facets of Human culture. This gargantuan scope demands specialization, which - in turn - demands organization; motivating the need for market sectors.
 
 Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaciton. This metric is integral to risk management, ånd relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the consituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment. The significance of accurate sector assignments is reaffirmed by the fact that all of the \textit{Big 3} credit rating agencies cite market sector rating as a key component in determining credit ratings.\citeFormat{\cite{StandardPoorsRatingServices2014CorporateMethodology}}\citeFormat{\cite{Hill2016FinancialMethodology}}\citeFormat{\cite{FitchRatings2019ProceduresRatings}}
 
 Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of hte the market. It is a well-known corollary of Modern Portfolio Theory that diversification provides savings an enhanced risk-return portfolio for any given basket of assets.\citeFormat{\cite{Markowitz1952PortfolioSelection}} This, combined with the excellent cost savings provided by modern Exchange Traded Funds (hereafter \textit{ETFs}), has led to a rapid prolification of these products in the Financial System today.
 
-\section{Status Quo}
+\section{Status Quo} \label{introduction:status_quo}
 
 In the United States today, there are myriad sectorization taxonomies (hereafter \textit{sector universes}). To limit the scope of this analysis, we will focus on two of the three most popular sector classification systems\citeFormat{\cite{FidelityInvestments2019KnowIndustries}}; the GICS, and the ICB.
 
@@ -58,7 +56,7 @@ The ICB (Industry Classification Benchmark)\citeFormat{\cite{FTSEInternationalLi
 Similar to the GICS, ICB too utilizes three main criteria when classifying companies into specific sectors, and other cateogries. They are; the primary source of revenue, description in annual filings, and - in the case of a new company - information derived from the company prospectus, or regulatory filing descriptions (company-supplied).
 
 
-\section{Key Limitations}
+\section{Key Limitations} \label{introduction:key_limitations}
 
 \begin{wrapfigure}[11]{R}{0.3\textwidth}
     \centering
