[rukmal] finished model data section

--- a/main.tex
+++ b/main.tex
@@ -56,8 +56,8 @@
 % Literature Review
 \subfile{sections/03_literature_review}
 
-% Feature Selection
-\subfile{sections/04_feature_selection}
+% Model Data
+\subfile{sections/04_model_data}
 
 % Unsupervised Learning Methods Survey
 \subfile{sections/05_unsupervised_learning_methods_survey}
