--- a/references.bib
+++ b/references.bib
@@ -96,6 +96,16 @@
     url = {https://wrds-web.wharton.upenn.edu/wrds/query_forms/navigation.cfm?navId=60}
 }
 
+@misc{SPGlobalMarketIntelligence2019CompustatIntelligence,
+    title = {{Compustat Data from S{\&}amp;P Global Market Intelligence}},
+    year = {2019},
+    author = {{S{\&}P Global Market Intelligence}},
+    publisher = {S{\&}P Global Market Intelligence},
+    url = {https://www.spglobal.com/marketintelligence/en/solutions/fundamental-data},
+    institution = {S{\&}P Global},
+    address = {New York}
+}
+
 @techreport{MSCIResearch2018ConsultationIndexes,
     title = {{Consultation on Implementation of 2018 GICS Changes in the MSCI Equity Indexes}},
     year = {2018},
@@ -184,6 +194,14 @@
     url = {www.moodys.com/methodologies},
     institution = {Moody's Investor Service},
     address = {New York}
+}
+
+@misc{U.S.SecuritiesandExchangeCommission2019Form10-K,
+    title = {{Form 10-K}},
+    year = {2019},
+    booktitle = {testing},
+    author = {{U.S. Securities and Exchange Commission}},
+    url = {https://www.sec.gov/fast-answers/answers-form10khtm.html}
 }
 
 @misc{MSCI-MorganStanleyCapitalInternational2019GICSMSCI,
@@ -462,6 +480,15 @@
     publisher = {Routledge},
     url = {https://www.taylorfrancis.com/books/9781351663960/chapters/10.4324/9781315160955-8},
     doi = {10.4324/9781315160955-8}
+}
+
+@misc{TheWhartonSchool1993WhartonServices,
+    title = {{Wharton Research Data Services}},
+    year = {1993},
+    author = {{The Wharton School}},
+    publisher = {University of Pennsylvania},
+    url = {https://wrds-web.wharton.upenn.edu/wrds/},
+    address = {Philadelphia}
 }
 
 @article{Bhojraj2003WhatsResearch,
