--- a/resources/glossary.tex
+++ b/resources/glossary.tex
@@ -72,3 +72,9 @@
     name=GICS,
     description={Global Industry Classification System; informs the S\&P 500 Sector Classifications}
 }
+
+\newglossaryentry{WRDS}
+{
+    name=WRDS,
+    description={Wharton Research Data Services}
+}
