--- a/sections/03_literature_review.tex
+++ b/sections/03_literature_review.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
     
-\chapter{Literature Review}
+\chapter{Literature Review} \label{literature_review}
 
 Having identified concrete research goals designed to fully explore the scope our thesis statement, we explored existing research in the field of market segmentation.
 
@@ -42,7 +42,7 @@ The authors of \textit{A purchase-based market segmentation methodology}\citeFor
 
 \pagebreak
 
-\section{Relationship between Economic Sectors and Fundamentals Data}
+\section{Relationship between Economic Sectors and Fundamentals Data} \label{literature_review:economic_sectors_fundamentals}
 
 \textit{The determinants of capital structure in transitional economies}\citeFormat{\cite{Delcoure2007TheEconomies}} provides an in-depth quantitative analysis of the alignment of traditional optimal capital-structure dogma against the real-world behavior of companies in transitional economies. The results suggest that while some traditional capital structure theories are indeed applicable to transitional economies, a large portion of capital structures are not well described by these traditional theories. Rather, the author finds that disparities in legal systems, shareholder power and demographics, and corporate governance provide a significantly better frame of explanation for the variance observed in capital structure.
 
@@ -50,9 +50,9 @@ The authors of \textit{A purchase-based market segmentation methodology}\citeFor
 
 As highlighted above in Section~\ref{literature_review:existing_heuristic_evaluation}, existing sectorization heuristics do not exhibit strong temporal stability. Thus, to avoid overfitting against the changing dynamics of a market when designing our new sectorization heuristic, we postulate that it would be beneficial to treat the market as constantly transitional. Under this assumption, the findings of \citeauthor{Delcoure2007TheEconomies} can be applied to our prospective heuristic to great effect. The author's findings would suggest that we focus on determinants of the factors listed above to best capture the idiosyncratic dynamics of a given company, as opposed to focusing on traditional metrics of performace, such as asset returns.
 
-Under the assumptions of the Modigliani-Miller theoretic universe, the capital structure irrelevance principle\citeFormat{\cite{Modigliani1958TheInvestment}} postulates that - in an efficient market - the value of a firm is unaffected by how that firm is financed. However, given that all of the conditions of the theoretic universe are violated in the real world, this leads to the profound realization that capital structure is the single most important determintant of firm value.\citeFormat{\cite{Vernimmen2005CorporatePractice}} Based on the observation that firm value is derived from a company's intrinsic economic domain of operation, the capital structure irrelevance principle - in conjunction with the violation of Modigliani-Miller unvierse assumptions - implies that capital structure is governed by the idiosyncracies of the true economic domain of a company.
+Under the assumptions of the Modigliani-Miller theoretic universe (no taxes, bankruptcy costs, agency costs, and asymmetric information), the capital structure irrelevance principle\citeFormat{\cite{Modigliani1958TheInvestment}} postulates that - in an efficient market - the value of a firm is unaffected by how that firm is financed. However, given that all of the conditions of the theoretic universe are violated in the real world, this leads to the profound realization that capital structure is the single most important determintant of firm value.\citeFormat{\cite{Vernimmen2005CorporatePractice}} Based on the observation that firm value is derived from a company's intrinsic economic domain of operation, the capital structure irrelevance principle - in conjunction with the violation of Modigliani-Miller unvierse assumptions - implies that capital structure is governed by the idiosyncracies of the true economic domain of a company.
 
-Given that the exact quantified magnitude of violation of each of the Modigliani-Miller theoretic universe conditions are inherently specific to a given economic segment, we postulate that corporation fundamentals reflective of capital structure - particularly those specific to the Modigliani-Miller universe conditions - would be the optimal determinants of truly objective sectors reflective of the underlying economy.
+Given that the exact quantified magnitude of violation of each of the Modigliani-Miller theoretic universe conditions are inherently specific to a given economic segment, we postulate that corporation fundamentals reflective of capital structure - particularly those components specific to the Modigliani-Miller universe conditions - would be the optimal descriptors of the true underlying economic domain of a company.
 
 
 \end{document}
