--- a/sections/01_introduction.tex
+++ b/sections/01_introduction.tex
@@ -12,7 +12,7 @@ The evolution of Market Segments and Market Sectors have historically been extre
 
 \section{Applications of Market Sectors}
 
-The United States Government began classifying companies into segments and sub-groups with the introduction of the Standard Industrial Classification (hereafter \textit{SIC}) system in 1937.\citeFormat{\cite{OfficeofStatisticalStandards-BureauoftheBudget1957HistoryClassification}} As evidenced by history, the effective classification of companies is a key prerequisite to scalable monitoring and governance. The sheer scope of the modern economy guarantees the necessity of such classificaitons; the current scope of the economy spans - indisputably - all facets of Human culture. This gargantuan scope demands specialization, which - in turn - demands organization; motivating the need for market sectors.
+The United States Government began classifying companies into segments and sub-groups with the introduction of the Standard Industrial Classification (hereafter \textit{SIC}) system in 1937.\citeFormat{\cite{OfficeofStatisticalStandards-BureauoftheBudget1957HistoryClassification}} Certainly, the effective classification of companies is a key prerequisite to scalable monitoring and governance. The sheer scope of the modern economy guarantees the necessity of such classificaitons; the current scope of the economy spans - indisputably - all facets of Human culture. This gargantuan scope demands specialization, which - in turn - demands organization; motivating the need for market sectors.
 
 Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaciton. This metric is integral to risk management, ånd relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the consituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment. The significance of accurate sector assignments is reaffirmed by the fact that all of the \textit{Big 3} credit rating agencies cite market sector rating as a key component in determining credit ratings.\citeFormat{\cite{StandardPoorsRatingServices2014CorporateMethodology}}\citeFormat{\cite{Hill2016FinancialMethodology}}\citeFormat{\cite{FitchRatings2019ProceduresRatings}}
 
