--- a/resources/header.tex
+++ b/resources/header.tex
@@ -3,9 +3,11 @@
 \usepackage{amsmath} % Math
 \usepackage{amssymb} % Math
 \usepackage[tikz]{bclogo} % Fancy boxes
+\usepackage{booktabs} % Better tables
 \usepackage[authordate, maxcitenames=1]{biblatex-chicago} % chicago bibliography style
 \usepackage{caption} % Captions
 \usepackage{csquotes} % For chicago bibliography style
+\usepackage{csvsimple} % CSV imports
 \usepackage[type={CC}, modifier={by-sa}, version={3.0}]{doclicense} % CC License
 \usepackage{enumerate} % Special enumeration
 \usepackage{fancyhdr} % Fancy heders
@@ -18,6 +20,7 @@
 \usepackage{parskip} % Custom skips
 \usepackage{relsize} % Relative sizing
 \usepackage{rotating} % Rotated images
+\usepackage{supertabular} % Multicolumn long tables
 \usepackage{wrapfig} % Text wrapping around figures
 \allowdisplaybreaks[1]
 \setlength{\footnotemargin}{1em}
@@ -27,7 +30,6 @@
 %==============
 % See: http://ftp.isu.edu.tw/pub/Unix/CTAN/macros/latex/contrib/caption/caption.pdf
 \captionsetup{labelfont=bf, textfont=it}
-
 
 % Section Numbering Setup
 %========================
